Implementing more secure google auth & fixing some issues

--- a/master/buildbot/status/web/templates/layout.html
+++ b/master/buildbot/status/web/templates/layout.html
@@ -46,7 +46,7 @@
     <a href="{{ authz.httpLoginUrl }}">Login</a>
     {% elif authz.auth %}
     <form method="post" name="login" action="{{ path_to_root }}login">
-    <a href="https://accounts.google.com/o/oauth2/auth?redirect_uri=http%3A%2F%2Flocalhost%3A8010%2Flogin&response_type=code&client_id=242692616574-h25armq6ga7v1i6k90magjnrnijfkeco.apps.googleusercontent.com&scope=email%20profile">Sign in with Google</a>
+    <a href="{{path_to_root}}redirect">Sign in with Google</a>
     <input type="text" name="username" size="100" />
     <input type="password" name="passwd" size="10" />
     <input type="submit" value="login" />
@@ -88,5 +88,5 @@
       Page built: <b>{{ time }}</b> ({{ tz }})
     </div>
     {% endblock -%}
-  </body>
+</body>
 </html>
