Revert "Removing row marks from default css"
This reverts commit d31c7233d981474b3561f09d080f3c09463649db.

--- a/master/buildbot/status/web/files/default.css
+++ b/master/buildbot/status/web/files/default.css
@@ -621,6 +621,11 @@ form.command_forcebuild {
     margin: .5em;
 }
 
+form.command_forcebuild > .row {
+    border-top: 1px dotted gray;
+    padding: .5em 0;
+}
+
 form.command_forcebuild .force-textarea > .label {
     display: block;
 }
